react-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-demo-svc
  namespace: default
  labels:
    app: route-demo
spec:
  type: ClusterIP
  selector:
    app: route-demo
  ports:
   - name: http
     port: 80
     targetPort: 5173
     protocol: TCP
